...
        route = NavigationRoutes.Albums.route,
        title = "Álbumes",
        icon = Icons.Default.Album
    )
    object Artists: BottomNavItem(
        route = NavigationRoutes.Artists.route,
        title = "Artistas",
        icon = Icons.Default.People
    )
    object Collectors: BottomNavItem(
        route = NavigationRoutes.Collectors.route,
        title = "Coleccionistas",
        icon = Icons.Default.Mic
...
